[package]
name = "dimensional_quantity"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Check units of measure at compile time using generic const expressions"
repository = "https://github.com/crystal-growth/dimensional_quantity"
homepage = "https://github.com/crystal-growth/dimensional_quantity"
documentation = "https://docs.rs/dimensional_quantity"
readme = "README.md"
keywords = [
    "units",
    "dimensions",
    "quantities",
    "measurement",
    "dimensional-analysis",
]
categories = ["science"]

[dependencies]
num-traits = "0.2"
serde = { version = "1.0",  features = ["derive"], optional = true }
rust_decimal = {version = "1.35", optional = true}

[build-dependencies]
serde = { version = "1", features = ["derive"] }

toml = "0.8"
num-traits = "0.2"

[features]
"use_serde" = ["dep:serde"]
"decimal" = ["dep:rust_decimal"]
